# PingPair

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md
Software/: .gitignore  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  requirements.txt
Software/Configs/: MyProfile.config.json  Template.json  Template_2.config.json  Test.config.json  Test_NoExt.config.json  bad.config.json  partial.config.json
Software/src/pingpair/: __init__.py  __main__.py  app.py  branding.py  context.py  help_loader.py  paths.py  settings.py  theme.py  welcome_cards.py
Software/src/pingpair/analysis/: __init__.py  chart_renderer.py  comparison.py  run_to_loaded.py  sidecar_loader.py  stats.py
Software/src/pingpair/config/: __init__.py  config_io.py  defaults.json  schema.py
Software/src/pingpair/core/: __init__.py  case.py  fix_actions.py  nic_resolve.py  plan.py  prereq.py  role_detect.py  runner.py  sounds.py  state_capture.py  update_apply.py  updater.py  winexec.py
Software/src/pingpair/reporting/: __init__.py  _logo.py  appendix.py  comparison_docx.py  comparison_pdf.py  comparison_txt.py  comparison_xlsx.py  config_writer.py  docx_writer.py  pdf_writer.py  png_charts_writer.py  run_report.py  txt_writer.py  xlsx_writer.py
Software/src/pingpair/resources/: __init__.py
Software/src/pingpair/views/: __init__.py  _analysis_charts.py  _analysis_diff_panel.py  _analysis_filters.py  _analysis_stats_panel.py  _analysis_trend_panel.py  _base.py  _export_comparison_dialog.py  _help_link.py  _image_zoom.py  _qt_runner.py  _sounds.py  _sweep_table.py  _validators.py  about_view.py  analysis_view.py  config_view.py  splash.py  (+9 more)
Software/tests/: conftest.py  test_about_updates.py  test_analysis_loader.py  test_analysis_stats.py  test_appendix.py  test_branding_icon.py  test_chart_renderer.py  test_comparison_writers.py  test_config_io.py  test_control_loopback.py  test_ethernet_cable.py  test_final_review_fixes.py  test_fix_static_ip.py  test_help_loader.py  test_help_view.py  test_iperf3_text.py  test_link_watch_and_server_banner.py  test_multi_segment.py  test_nic_resolve.py  test_parsers.py  test_paths_reports.py  test_plan.py  test_prereq.py  test_protocol.py  test_qtbot_interaction.py  test_quickstart_role_parity.py  test_reports.py  test_reset_all.py  test_review_fixes_2026_06_04.py  test_role_detect.py  test_role_warning.py  test_round18_eta.py  test_round18_loopback_sweep.py  test_round19_ip_fix_and_button.py  test_round20_crash_guard_and_segment_label.py  test_round21_crash_layout_loopback.py  test_round22_welcome_analysis_diagrams.py  test_round23_welcome_zoom_help.py  test_round24_welcome_help_analysis.py  test_round25_search_welcome_help_analysis.py  (+23 more)
Software/tools/: build_help_diagrams.py  build_help_shots.py  build_quick_start_help.py  check_tool_updates.py  fix_topology_corners.py  gen_changelog.py  gui_review.py  render_app_reference.py  render_welcome_reference.py
(+31 files in other folders)
